@@ -8,10 +8,10 @@ if {[catch {
 
 package require udp
 
-# Some tests are marked as slow as they can take 30s to test a volume of packets.
-# We generally just test for correctness and these do not significantly contribute
-# in testing correctness.
-::tcltest::testConstraint slow 1
+# Some tests are marked as slow as they can take 30s to test a volume
+# of packets.  We generally just test for correctness and these do not
+# significantly contribute in testing correctness.
+::tcltest::testConstraint slow 0
 
 # Enable printing timing information during some tests.
 ::tcltest::testConstraint timestamp 1
